<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:backgroundTint="@color/blue"
        android:id="@+id/edittext_name"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Please enter your first and last name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_topping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textStyle="bold"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/checkbox_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/whipped_cream"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_topping" />

    <CheckBox
        android:id="@+id/checkbox_chocalate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chocolate"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_cream"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_Quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox_chocalate"
        android:text="@string/quantity"
        android:layout_marginTop="12dp"
        />

    <Button
        android:id="@+id/button_azaltr"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/minus"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Quantity"
         />

    <TextView
        android:id="@+id/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:onClick="mainBtnClick"
        android:text="@string/_0"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_azaltr"
        app:layout_constraintTop_toBottomOf="@id/text_Quantity" />

    <Button
        android:id="@+id/button_arttir"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/plus"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="10dp"
        android:onClick="mainBtnClick"
        app:layout_constraintTop_toBottomOf="@id/text_Quantity"
        app:layout_constraintStart_toEndOf="@id/button_text"
        android:layout_marginStart="8dp" />


    <TextView
        android:id="@+id/txtOrderSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="ORDER SUMMARY"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_arttir"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtOrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/order_format"
        android:textAppearance="?android:textAppearanceSmall"
        android:visibility="invisible"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Quantity"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/order_button_text"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"

       app:layout_constraintTop_toBottomOf="@id/txtOrderSummary" />


</androidx.constraintlayout.widget.ConstraintLayout>